# Bhajan

./: .gitignore  Dockerfile  OPEN_QUESTIONS.md  PRD.md  README.md  docker-compose.light.yml  docker-compose.yml  mcp.json  pyproject.toml  requirements.txt  start_docker_stack.ps1
aws/: README.md  ec2_rvc_setup.sh  launch_ec2.ps1  rvc_server.py
chrome_extension/: README.md  manifest.json  options.html  options.js  popup.css  popup.html  popup.js
config/: .env.example  learning.yaml  rules.md
docs/: AGENTS.md  ARCHITECTURE.md  DATA_MODELS.md  MCP_SERVERS.md  ORCHESTRATION.md  ROADMAP.md
hf_space/: Dockerfile  README.md  app.py  requirements.txt
knowledge_base/: README.md  kb_config.yaml
knowledge_base/sources/: youtube_urls.txt
knowledge_base/sources/artist_lyrics/: EXAMPLE_mere_shyam.md
knowledge_base/sources/lyrics/: khatu-shyam-chalisa.md  shyam-aarti.md
knowledge_base/sources/pronunciation/: common-terms.md
knowledge_base/sources/scripture/: khatu-shyam-katha.md
knowledge_base/sources/taal_raag/: bhajan-taals.md  keherwa.md
notebooks/: README.md  voice_clone_colab.ipynb
skills/: clone_voice.md  generate_music.md  mix_and_master.md  produce_bhajan.md  publish.md  quality_review.md
src/bhajanforge/: __init__.py  api.py  cli.py  config.py  graph.py  llm.py  logging_utils.py  models.py  runs.py  state.py
src/bhajanforge/agents/: __init__.py  composer.py  lyricist.py  mixing.py  packager.py  quality_judge.py  voice.py
src/bhajanforge/mcp_servers/: __init__.py  common.py
src/bhajanforge/mcp_servers/audio_mcp/: __init__.py  core.py  (+2 more)
src/bhajanforge/memory/: __init__.py  learning.py
src/bhajanforge/rag/: __init__.py  embeddings.py  ingest.py  retriever.py
src/tests/: conftest.py  test_agents.py  test_asr_groq.py  test_audio_mcp.py  test_foundation.py  test_governance.py  test_lyricist_llm.py  test_packager.py  test_pipeline.py  test_rag.py  test_rag_persist.py  test_rvc_mcp.py  test_stem_mcp.py  test_suno_mcp.py  test_suno_self_hosted.py  test_suno_stems.py
tools/: check_hf_space.py  convert_to_my_voice.py  deploy_hf_space.py  extract_suno_cookie.py  hf_build_logs.py  produce_custom.py  save_voice_model.py  test_lyrics_to_voice.py  test_voice_convert.py  test_voice_full.py  train_voice_replicate.py
(+12 files in other folders)
